chore: 🤖 update package names

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "universe",
+  "name": "@universe/platform",
   "version": "1.0.0",
   "description": "Universe monorepo",
   "author": "Tom-Rune Bornholdt",
