--- a/packages/client/main/package.json
+++ b/packages/client/main/package.json
@@ -1,17 +1,22 @@
 {
   "name": "@universe/client-main",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "dist/index.cjs",
+  "license": "MIT",
   "scripts": {
-    "start": "electron .",
-    "build": "electron-builder"
+    "start": "node ../scripts/watch.js",
+    "build": "node ../scripts/build.js",
+    "package": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
+    "update-electron-vendors": "node ../scripts/update-electron-vendors.js"
   },
   "dependencies": {
     "electron-updater": "4.6.2"
   },
   "devDependencies": {
+    "@types/electron-devtools-installer": "2.2.0",
     "electron": "16.0.1",
-    "electron-builder": "^22.13.1"
+    "electron-builder": "^22.13.1",
+    "electron-devtools-installer": "3.2.0"
   },
   "build": {
     "appId": "bornholdt-digital.universe",
