--- a/packages/client/main/package.json
+++ b/packages/client/main/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ../scripts/watch.js",
     "build": "node ../scripts/build.js",
-    "package": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
+    "package": "electron-builder build --config electron-builder.config.js --dir",
     "update-electron-vendors": "node ../scripts/update-electron-vendors.js"
   },
   "dependencies": {
