--- a/packages/client/renderer/package.json
+++ b/packages/client/renderer/package.json
@@ -1,5 +1,31 @@
 {
   "name": "@universe/client-renderer",
   "version": "1.0.0",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@iconify-icons/ic": "^1.1.15",
+    "@iconify/react": "^3.1.0",
+    "classnames": "^2.3.1",
+    "dompurify": "^2.3.3",
+    "firebase": "^9.5.0",
+    "i18next": "^21.5.2",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
+    "immer": "^9.0.6",
+    "marked": "^4.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.14.2",
+    "styled-components": "^5.3.3",
+    "zustand": "^3.6.5"
+  },
+  "devDependencies": {
+    "@types/dompurify": "^2.3.1",
+    "@types/marked": "^4.0.0",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.15",
+    "@vitejs/plugin-react": "^1.0.7",
+    "sass": "^1.43.4"
+  }
 }
