--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "4.3.0",
     "prettier": "2.4.1",
+    "semantic-release": "^18.0.0",
     "typescript": "4.5.2",
     "vite": "2.6.14"
   }
