--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,13 +17,13 @@ jobs:
       - name: Checkout git repo
         uses: actions/checkout@v2
 
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v2
-        id: semantic
-        with:
-          dry_run: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Semantic Release
+      #   uses: cycjimmy/semantic-release-action@v2
+      #   id: semantic
+      #   with:
+      #     dry_run: true
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: Install Node, NPM and Yarn
       #   uses: actions/setup-node@v2
