--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "4.3.0",
+    "lerna": "4.0.0",
     "prettier": "2.4.1",
     "semantic-release": "^18.0.0",
     "typescript": "4.5.2",
