--- a/packages/client/main/package.json
+++ b/packages/client/main/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "main": "dist/index.cjs",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "start": "node ../scripts/watch.js",
     "build": "node ../scripts/build.js",
