--- a/packages/client/renderer/package.json
+++ b/packages/client/renderer/package.json
@@ -2,6 +2,7 @@
   "name": "@universe/client-renderer",
   "version": "1.0.1",
   "license": "MIT",
+  "private": true,
   "dependencies": {
     "@iconify-icons/ic": "1.1.15",
     "@iconify/react": "3.1.0",
