feat: 🎸 add release script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:client": "cross-env MODE=production yarn --cwd packages/client/main build",
     "package:client": "cross-env MODE=production yarn --cwd packages/client/main package",
     "update-electron-vendors": "yarn --cwd packages/client/main update-electron-vendors",
-    "commit": "npx git-cz"
+    "commit": "npx git-cz",
+    "release": "lerna version --conventional-commits"
   },
   "workspaces": [
     "packages/**"
