--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - main
-      - next
 
 jobs:
   publish:
@@ -11,19 +10,11 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [ubuntu-latest]
 
     steps:
       - name: Checkout git repo
         uses: actions/checkout@v2
-
-      # - name: Semantic Release
-      #   uses: cycjimmy/semantic-release-action@v2
-      #   id: semantic
-      #   with:
-      #     dry_run: true
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Node, NPM and Yarn
         uses: actions/setup-node@v2
