--- a/.github/workflows/sentry-release.yml
+++ b/.github/workflows/sentry-release.yml
@@ -17,6 +17,11 @@ jobs:
       - name: Checkout git repo
         uses: actions/checkout@v1
 
+      - name: Set git config
+        run: |
+          git config --global user.email "bot@github.com"
+          git config --global user.name "GitHub Bot"
+
       # - name: Create Sentry release
       #   uses: getsentry/action-release@v1
       #   env:
