--- a/.github/workflows/client-release.yml
+++ b/.github/workflows/client-release.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout git repo
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set git config
         run: |
