--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout git repo
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set git config
         run: |
@@ -36,15 +38,3 @@ jobs:
           yarn release -y
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: Publish releases
-      #   env:
-      #     # These values are used for auto updates signing
-      #     # APPLE_ID: ${{ secrets.APPLE_ID }}
-      #     # APPLE_ID_PASS: ${{ secrets.APPLE_ID_PASS }}
-      #     # CSC_LINK: ${{ secrets.CSC_LINK }}
-      #     # CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
-      #     # This is used for uploading release assets to github
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: |
-      #     yarn package:publish
