fix: 🐛 add custom gh token

--- a/.github/workflows/client-release.yml
+++ b/.github/workflows/client-release.yml
@@ -40,6 +40,6 @@ jobs:
 
       - name: Publish releases
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PERSONAL_TOKEN }}
         run: |
           yarn package:publish:client
