--- a/packages/client/main/package.json
+++ b/packages/client/main/package.json
@@ -8,7 +8,7 @@
     "start": "node ../scripts/watch.js",
     "build": "node ../scripts/build.js",
     "package": "electron-builder build --config electron-builder.config.js --dir",
-    "package:publish": "yarn package --publish always --win --mac --linux",
+    "package:publish": "electron-builder build --config electron-builder.config.js --publish always --win --mac --linux",
     "update-electron-vendors": "node ../scripts/update-electron-vendors.js"
   },
   "dependencies": {
