--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
 
   publish:
     needs: lerna
-    runs-on: macos-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout git repo
