feat: 🎸 add sentry

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ VITE_FIREBASE_MEASUREMENT_ID=G-DDKLQ4HDGL
 VITE_RECAPTCHA_V3_KEY=6LeRmD8dAAAAAGKBW_R3fkaLu_f_ymPoGxYqXSak
 
 VITE_FIREBASE_EMULATOR_URL=http://localhost
+
+VITE_SENTRY_URL=https://d29bdd33ad2347a1a9fc35d44f539e3a@o512127.ingest.sentry.io/6078354
