--- a/packages/client/main/package.json
+++ b/packages/client/main/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "electron-log": "4.4.1",
-    "electron-updater": "4.6.2"
+    "electron-updater": "4.6.2",
+    "@sentry/electron": "2.5.4"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "2.2.0",
