--- a/packages/client/preload/package.json
+++ b/packages/client/preload/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@universe/client-preload",
   "version": "0.2.3",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@sentry/electron": "2.5.4"
+  }
 }
