--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,10 @@ jobs:
         run: |
           yarn install --frozen-lockfile
 
+      - name: Run Lerna 2
+        uses: ./.github/actions/lerna-release
+        id: lerna-release
+
       - name: Run Lerna
         run: |
           yarn release -y
